name:                  webship-decision
version:               0.0.1
license:               AllRightsReserved
author:                Charles O'Farrell <charleso@charleso.org>
maintainer:            Charles O'Farrell <charleso@charleso.org>
synopsis:              webship-decision
category:              Web
cabal-version:         >= 1.8
build-type:            Simple
description:           webship-decision.

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , bytestring                      == 0.10.*
                     , http-media                      == 0.6.*
                     , http-types                      == 0.8.*
                     , text                            == 1.2.*
                     , time                            == 1.4.*
                     , wai                             == 3.0.*
                     , wai-extra                       == 3.0.*
                     , webship-http
                     , webship-wai


  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Webship.Decision
                       Webship.Decision.Core
                       Webship.Decision.Data
