name:                  webship-wai
version:               0.0.1
license:               AllRightsReserved
author:                Charles O'Farrell <charleso@charleso.org>
maintainer:            Charles O'Farrell <charleso@charleso.org>
synopsis:              webship-wai
category:              Web
cabal-version:         >= 1.8
build-type:            Simple
description:           webship-wai.

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , blaze-builder                   == 0.4.*
                     , http-types                      == 0.8.*
                     , wai                             == 3.0.*


  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Webship.Wai
                       Webship.Wai.Response
